--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -1,9 +1,7 @@
 {# Opnemen van de "Main" file #}
 {% extends "main.html.twig" %}
 
-{% block header %}
-<img src="assets/img/logo-v2.png"/>
-{% endblock %}
+
 
 
 {# nu de block content op in de main pagina vullen #}
@@ -40,9 +38,129 @@
         </li>
     {% endfor %}
     <ul>
-     {# Dump #}
-       <pre>
+       
+
+
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="row">
+				<div class="col-md-6">
+                {% block header %}
+                <img src="assets/img/logo-v2.png"/>
+                {% endblock %}
+				</div>
+				<div class="col-md-6">
+				</div>
+			</div>
+			<div class="carousel slide" id="carousel-843242">
+				<ol class="carousel-indicators">
+					<li data-slide-to="0" data-target="#carousel-843242">
+					</li>
+					<li data-slide-to="1" data-target="#carousel-843242" class="active">
+					</li>
+					<li data-slide-to="2" data-target="#carousel-843242">
+					</li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="carousel-item">
+						<img class="d-block w-100" alt="Carousel Bootstrap First" src="https://www.layoutit.com/img/sports-q-c-1600-500-1.jpg" />
+						<div class="carousel-caption">
+							<h4>
+								First Thumbnail label
+							</h4>
+							<p>
+								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+							</p>
+						</div>
+					</div>
+					<div class="carousel-item active">
+						<img class="d-block w-100" alt="Carousel Bootstrap Second" src="https://www.layoutit.com/img/sports-q-c-1600-500-2.jpg" />
+						<div class="carousel-caption">
+							<h4>
+								Second Thumbnail label
+							</h4>
+							<p>
+								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+							</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100" alt="Carousel Bootstrap Third" src="https://www.layoutit.com/img/sports-q-c-1600-500-3.jpg" />
+						<div class="carousel-caption">
+							<h4>
+								Third Thumbnail label
+							</h4>
+							<p>
+								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+							</p>
+						</div>
+					</div>
+				</div> <a class="carousel-control-prev" href="#carousel-843242" data-slide="prev"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-843242" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<div class="row">
+				<div class="col-md-6">
+					<div class="row">
+						<div class="col-md-12">
+                            <h1>Heading #1</h1>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+                            <h2>Heading #2</h2>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="row">
+						<div class="col-md-6">
+                            <h3>Gerecht 1</h3>
+						</div>
+						<div class="col-md-6">
+                            <h3>Gerecht 2</h3>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+                            <h3>Gerecht 3</h3>
+						</div>
+						<div class="col-md-6">
+                            <ul>
+                                {% for record in data %}
+                                <li>
+                                    <img src="{{ record.foto }}" style="width: 100px; heigfht: 100px;">
+
+                                    {{ record.title }}  
+            
+                                    <ul>
+                                        {% for ingr in record.ingredienten %}
+                                        <li>
+                                            <span {% if ingr.id < 2 %}style='color: #F00'{% endif %}>{{  ingr.naam }}</span>
+                                            {%  if ingr.id == 3 %}
+                                            <strong>Dit is ID 3!</strong>
+                                            {%  endif  %}
+                                        </li>
+                                        {% endfor %}
+                                    </ul>
+                                </li>
+                                {% endfor %}
+                            <ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+    <pre>
         {{ dump(data) }}
-       </pre>
+    </pre>
+
 
 {% endblock %}
